adds style foundations for the homepage

--- a/client/layouts/AppLayout.html
+++ b/client/layouts/AppLayout.html
@@ -1,6 +1,6 @@
 <template name="AppLayout">
     <header class="header">
-        <h1 class="site-title">My Meteor Appx</h1>
+        <h1 class="site-title"><img alt="Level Up Tutorials Logo" src="/logo.svg" width="150"></h1>
     </header>
     {{> AppNav}}
     <main class="app-layout">
