--- a/client/layouts/HomeLayout.html
+++ b/client/layouts/HomeLayout.html
@@ -1,4 +1,4 @@
-<template name="MainLayout">
+<template name="HomeLayout">
     <header class="header">
         <h1 class="site-title"><img alt="Level Up Tutorials Logo" src="/logo.svg" width="150"></h1>
         {{> MainNav}}
