--- a/client/layouts/MainLayout.html
+++ b/client/layouts/MainLayout.html
@@ -1,8 +1,5 @@
 <template name="MainLayout">
-    <header class="header">
-        <h1 class="site-title"><img alt="Level Up Tutorials Logo" src="/logo.svg" width="150"></h1>
-        {{> MainNav}}
-    </header>
+    {{> Header}}
     <main class="main-layout">
         {{> Template.dynamic template=main}}
     </main>
