udpates to 1.3-modules-beta.5

--- a/client/partials/MainNav.html
+++ b/client/partials/MainNav.html
@@ -5,6 +5,7 @@
             <li><a href="/dashboard">Dashboard</a></li>
             {{#if currentUser }}
                 <li><a href="/user/{{currentUser._id}}">My Account</a></li>
+                <li class="logout">Logout</li>
             {{else}}
                 <li class="login-toggle">Login/Signup</li>
             {{/if}}
