--- a/style.scss
+++ b/style.scss
@@ -65,6 +65,16 @@ input[type="password"] {
     background: transparent;
 }
 
+.btn-primary {
+    @extend .btn;
+    background: $accent;
+    border: solid 2px $accent;
+    &:hover {
+        background: $accent - 30;
+        border-color: $accent - 30;
+    }
+}
+
 
 .header {
     background: white;
